<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tick Tack</string>
    <string name="hello_world">Welcome to Tick Tack Solver :-)</string>
    <string name="lose">You Lose...</string>
    <string name="Calculate">Find a solution</string>
    <string name="NoSolution">No solution</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Mult">*</string>
    <string name="Div">/</string>
    <string name="StartPlaying">Start</string>
    <string name="CancelLastMove">Cancel last move</string>
    <string name="TargetNumber">Target number</string>
    <string name="SourceNumber">Source number</string>
    <string name="BestResult">Best result</string>
    <string name="PlayerCalcCounter">Calc Counter</string>
    <string name="Clean">Clean all</string>
    <string name="Easy">Easy</string>
    <string name="Hard">Hard</string>
    <string name="Manual">Manual</string>
    <string name="WinMessage">Congratulations!</string>
    <string name="action_settings">Settings</string>
    <string name="ShowStopper">Stopper</string>
    <string name="Share">Share</string>
    <string name="Setting">Setting</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connect">Connect</string>
    <string name="discoverable">Discoverable</string>
    <string name="disconnect">Disconnect</string>
    <string name="back_string">Back</string>
    <string name="bt_not_enabled_leaving">BlueTooth is not enabled.</string>
    <string name="not_connected">Not connected.</string>
    <string name="none_paired">None Paired.</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan Devices</string>
    <string name="scanning">Scanning...</string>
    <string name="request_permission">Request Permission</string>
    <string name="scan_bluetooth">Need for scanning bluetooth</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="select_device">Select a Device</string>
    <string name="none_found">None found</string>
    <string name="exit_game">Exit Game?</string>
    <string name="new_game">New Game</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enable_sounds">Enable Sounds</string>
    <string name="use_all_numbers">You need to use all numbers</string>

</resources>
