<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="top"
    android:orientation="vertical"
    android:visibility="invisible"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bluetooth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/bluetooth"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConnectClick"
            android:text="@string/connect" />

        <Button
            android:id="@+id/discoverableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="discoverable"
            android:text="@string/discoverable" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="disconnect"
            android:text="@string/disconnect" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/enable_sound_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/enable_sounds" />

    <CheckBox
        android:id="@+id/ShowStopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/ShowStopper" />

    <Button
        android:id="@+id/back_from_setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackFromSettingClick"
        android:text="@string/back_string" />

</LinearLayout>
